# compiler

./: CMakeLists.txt  main.cpp  main.drawio
analyzer/: Makefile  lexer.cpp  lexer.hpp  parser.hpp  semantic.cpp  semantic.hpp  token.cpp  token.hpp
creator/: Makefile  generator.hpp  intermediate.cpp  intermediate.hpp  optimizer.hpp
g/: cycle.g  helloWorld.g
lexer/: CMakeLists.txt  lexer.cpp  lexer.drawio  lexer.hpp
parser/: CMakeLists.txt  parser.cpp  parser.drawio  parser.hpp
sintaxer/: CMakeLists.txt  sintaxer.cpp  sintaxer.hpp
syntaxer/: CMakeLists.txt  syntaxer.cpp  syntaxer.drawio  syntaxer.hpp
